# codecov-haskell

./: .gitignore  .travis.yml  README.md  codecov-haskell.cabal  stack.yaml
.circleci/: config.yml
exec/: RunCabalTestMain.hs  codecov-haskell.hs
src/Codecov/Haskell/: CmdLine.hs  Main.hs  Query.hs
src/Trace/Hpc/: Codecov.hs
src/Trace/Hpc/Codecov/: Config.hs  Curl.hs  Lix.hs  Util.hs
test/: TestCodecovHaskellLix.hs
