cabal-version:  2.0
name:           codecov-haskell
version:        0.5.0
synopsis:       Codecov.io support for Haskell.
description:
  This utility converts and sends Haskell projects hpc code coverage to
  <http://codecov.io/ codecov.io>.
  .
  /Usage/
  .
  Below is the simplest example of .travis.yml configuration to use with Travis CI:
  .
  > language: haskell
  > ghc: 7.8
  > script:
  >   - cabal configure --enable-tests --enable-library-coverage && cabal build && cabal test
  > after_script:
  >   - cabal install codecov-haskell
  >   - codecov-haskell [options] [test-suite-names]
  .
  Further information can be found in the <https://github.com/8c6794b6/codecov-haskell README>.

license:        BSD3
license-file:   LICENSE
author:         Guillaume Nargeot, 8c6794b6
maintainer:     8c6794b6 <8c6794b6@gmail.com>
copyright:      (c) 2014-2015 Guillaume Nargeot
                (c) 2020 8c6794b6
category:       Control
build-type:     Simple
stability:      experimental
tested-with:    GHC == 8.6, GHC == 8.8
homepage:       https://github.com/8c6794b6/codecov-haskell
bug-reports:    https://github.com/8c6794b6/issues

extra-source-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/8c6794b6/codecov-haskell.git

library
  hs-source-dirs: src
  exposed-modules:
    Codecov.Haskell.CmdLine
    Codecov.Haskell.Main
    Codecov.Haskell.Query
    Trace.Hpc.Codecov
    Trace.Hpc.Codecov.Config
    Trace.Hpc.Codecov.Lix
    Trace.Hpc.Codecov.Util
    Paths_codecov_haskell
  other-modules:
    Trace.Hpc.Codecov.Curl
  autogen-modules:
    Paths_codecov_haskell
  build-depends:
    aeson       >= 1.3 && < 1.5,
    base        >= 4 && < 5,
    bytestring  >= 0.10,
    containers  >= 0.5,
    cmdargs     >= 0.10,
    curl        >= 1.3.8,
    filepath    >= 1.4.1,
    hpc         >= 0.6,
    network-uri >= 2.6,
    retry       >= 0.7,
    safe        >= 0.3
  default-language:
    Haskell2010
  ghc-options:
    -Wall

executable codecov-haskell
  hs-source-dirs: exec
  main-is:        codecov-haskell.hs
  build-depends:
    base            >= 4 && < 5,
    codecov-haskell
  default-language:
    Haskell2010
  ghc-options:    -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns

-- executable run-cabal-test
--   hs-source-dirs: exec
--   main-is:        RunCabalTestMain.hs
--   build-depends:
--     async >= 2.0,
--     base >=4 && < 5,
--     process,
--     regex-posix,
--     split,
--     codecov-haskell
--   ghc-options:    -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns

test-suite test-all
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        TestAll.hs
  other-modules:  TestCodecovHaskellLix
                  TestCodecovHaskellUtil
                  Paths_codecov_haskell
  build-depends:
    base,
    codecov-haskell,
    HUnit
  default-language:
    Haskell2010
  ghc-options:    -Wall
